plugins {
    id 'com.android.application'
}

def releaseSigning = rootProject.ext.powerampRemoteReleaseSigning

android {
    namespace 'dev.powerampremote.server'
    compileSdk 36

    defaultConfig {
        // Legacy ID retained so existing installs keep their API token and upgrade in place.
        applicationId 'dev.r4remote.poweramp'
        minSdk 26
        targetSdk 36
        versionCode 13
        versionName '0.10.2'

        testInstrumentationRunner 'android.test.InstrumentationTestRunner'
    }

    signingConfigs {
        if (releaseSigning.configured) {
            release {
                storeFile releaseSigning.storeFile
                storePassword releaseSigning.storePassword
                keyAlias releaseSigning.keyAlias
                keyPassword releaseSigning.keyPassword
            }
        }
    }

    buildTypes {
        release {
            if (releaseSigning.configured) {
                signingConfig signingConfigs.release
            }
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildFeatures {
        buildConfig = false
    }

}

dependencies {
    implementation 'com.google.zxing:core:3.5.4'
    testImplementation 'junit:junit:4.13.2'
    // Android provides org.json at runtime; this mirrors the shared parsing contract in JVM tests.
    testImplementation 'org.json:json:20240303'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:deprecation']
}
